--- a/Spring2024/lab3/index.html
+++ b/Spring2024/lab3/index.html
@@ -9,8 +9,9 @@
   <body>
     <h1>Welcome to HTML and CSS</h1>
     <p id="demo">This is a paragraph to demonstrate HTML and CSS styling.</p>
+    <p id="hourglass">I dont know what an hour glass does</p>
     <button id="changeText">Change Text</button>
-
+    <button id="changeText2">New Text</button>
     <script src="script.js"></script>
   </body>
 </html>
